--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,12 +8,27 @@ on:
       - main
 
 jobs:
-  latest-cabal:
-    name: "Cabal: GHC ${{ matrix.ghc }}"
+  generateMatrix:
+    name: "Generate matrix from cabal"
     runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
+    steps:
+      - name: Checkout base repo
+        uses: actions/checkout@v2
+      - name: Extract the tested GHC versions
+        id: set-matrix
+        run: |
+          wget https://github.com/Kleidukos/get-tested/releases/download/v0.1.4.0/get-tested-0.1.4.0-linux-amd64 -O get-tested
+          chmod +x get-tested
+          ./get-tested --ubuntu literatex.cabal >> $GITHUB_OUTPUT
+
+  latest-cabal:
+    name: "Cabal: GHC ${{ matrix.ghc }} on ${{ matrix.os }}"
+    needs: generateMatrix
+    runs-on: ${{ matrix.os }}
     strategy:
-      matrix:
-        ghc: ['8.2.2', '8.4.4', '8.6.5', '8.8.4', '8.10.7', '9.0.2', '9.2.1']
+      matrix: ${{ fromJSON(needs.generateMatrix.outputs.matrix) }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -58,18 +73,18 @@ jobs:
           STACK_YAML: stack-${{ matrix.ghc }}.yaml
 
   cabal:
-    name: "Cabal ${{ matrix.cabal }}: GHC 8.2.2"
+    name: "Cabal ${{ matrix.cabal }}: GHC 8.10.7"
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        cabal: ['2.4.1.0', '3.0.0.0', '3.2.0.0', '3.4.0.0']
+        cabal: ['3.6.0.0']
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Setup Haskell
         uses: haskell/actions/setup@v1
         with:
-          ghc-version: 8.2.2
+          ghc-version: 8.10.7
           cabal-version: ${{ matrix.cabal }}
       - name: Build
         run: cabal new-build --enable-tests --enable-benchmarks
