--- a/literatex.cabal
+++ b/literatex.cabal
@@ -1,3 +1,4 @@
+cabal-version:  3.0
 name:           literatex
 version:        0.2.0.2
 category:       Utils
@@ -15,16 +16,9 @@ copyright:      Copyright (c) 2021-2022 Travis Cardwell
 license:        MIT
 license-file:   LICENSE
 
-cabal-version:  1.24
 build-type:     Simple
 tested-with:
-  GHC ==8.2.2
-   || ==8.4.4
-   || ==8.6.5
-   || ==8.8.4
-   || ==8.10.7
-   || ==9.0.2
-   || ==9.2.1
+  GHC =={ 8.10.7, 9.0.2, 9.2.1 }
 
 extra-source-files:
   CHANGELOG.md
